--- a/app/src/main/resources/static/index.html
+++ b/app/src/main/resources/static/index.html
@@ -120,7 +120,7 @@
 <body>
 <h1>🎉 EventShare</h1>
 
-<!-- 認証セクション -->
+<!-- ユーザー認証セクション -->
 <div id="auth-section">
     <div class="container">
         <h2>👤 ユーザー登録</h2>
@@ -157,7 +157,7 @@
     </div>
 </div>
 
-<!-- メインアプリセクション -->
+<!-- イベント登録セクション -->
 <div class="hidden" id="main-section">
     <div class="container">
         <button class="logout-btn" onclick="logout()">ログアウト</button>
