--- a/app/src/main/resources/static/index.html
+++ b/app/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>EventShare - イベント共有アプリ</title>
+    <title>EventShare-イベント共有アプリ</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -118,12 +118,12 @@
     </style>
 </head>
 <body>
-<h1>🎉 EventShare</h1>
+<h1>Spotlight</h1>
 
 <!-- ユーザー認証セクション -->
 <div id="auth-section">
     <div class="container">
-        <h2>👤 ユーザー登録</h2>
+        <h2>ユーザー登録</h2>
         <form id="register-form">
             <div class="form-group">
                 <label for="username">ユーザー名:</label>
@@ -142,7 +142,7 @@
     </div>
 
     <div class="container">
-        <h2>🔐 ログイン</h2>
+        <h2>ログイン</h2>
         <form id="login-form">
             <div class="form-group">
                 <label for="login-username">ユーザー名:</label>
@@ -158,15 +158,15 @@
 </div>
 
 <!-- イベント登録セクション -->
-<div class="hidden" id="main-section">
+<div class="hidden" id="eventRegi-section">
     <div class="container">
         <button class="logout-btn" onclick="logout()">ログアウト</button>
-        <h2>📅 イベント一覧</h2>
+        <h2>イベント一覧</h2>
         <div id="events-list"></div>
     </div>
 
     <div class="container">
-        <h2>➕ イベント作成</h2>
+        <h2>イベント作成</h2>
         <form id="event-form">
             <div class="form-group">
                 <label for="event-title">イベントタイトル:</label>
