DOM 操作できるように

--- a/app/src/main/resources/static/index.html
+++ b/app/src/main/resources/static/index.html
@@ -206,5 +206,12 @@
 <div id="status-message"></div>
 
 <script src="app.js"></script>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        document.getElementById('register-form').addEventListener('submit', userRegister);
+        document.getElementById('login-form').addEventListener('submit', userLogin);
+        document.getElementById('event-form').addEventListener('submit', createEvent);
+    });
+</script>
 </body>
 </html>
