--- a/app/src/main/resources/static/index.html
+++ b/app/src/main/resources/static/index.html
@@ -167,7 +167,7 @@
 
     <div class="container">
         <h2>イベント作成</h2>
-        <form id="event-form">
+        <form id="create-event-form">
             <div class="form-group">
                 <label for="event-title">イベントタイトル:</label>
                 <input id="event-title" required type="text">
