Add debug log and modi htmlid

--- a/app/src/main/resources/static/index.html
+++ b/app/src/main/resources/static/index.html
@@ -210,7 +210,7 @@
     document.addEventListener('DOMContentLoaded', function() {
         document.getElementById('register-form').addEventListener('submit', userRegister);
         document.getElementById('login-form').addEventListener('submit', userLogin);
-        document.getElementById('event-form').addEventListener('submit', createEvent);
+        document.getElementById('create-event-form').addEventListener('submit', createEvent);
     });
 </script>
 </body>
