--- a/app/src/main/resources/static/index.html
+++ b/app/src/main/resources/static/index.html
@@ -115,6 +115,39 @@
         .logout-btn:hover {
             background-color: #c0392b;
         }
+
+        /* 参加ボタンのスタイル */
+        .participate-btn {
+            background-color: #27ae60;
+            color: white;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 14px;
+            margin-top: 10px;
+            width: auto;
+        }
+
+        .participate-btn:hover {
+            background-color: #229954;
+        }
+
+        .cancel-btn {
+            background-color: #e67e22;
+            color: white;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 14px;
+            margin-top: 10px;
+            width: auto;
+        }
+
+        .cancel-btn:hover {
+            background-color: #d35400;
+        }
     </style>
 </head>
 <body>
