--- a/app/src/main/resources/static/index.html
+++ b/app/src/main/resources/static/index.html
@@ -235,6 +235,23 @@
             padding-top: 10px;
             border-top: 1px solid #ddd;
         }
+
+        .photo-btn {
+        background-color: #9b59b6;
+        color: white;
+        border: none;
+        padding: 8px 16px;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 14px;
+        margin-top: 10px;
+        width: auto;
+        margin-right: 5px;
+        }
+
+        .photo-btn:hover {
+            background-color: #8e44ad;
+        }
     </style>
 </head>
 <body>
